---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/assignment_operators.js
---
digraph {
    0 [ label = "ExpressionStatement" ]
    1 [ label = "" ]
    2 [ label = "ExpressionStatement" ]
    3 [ label = "" ]
    4 [ label = "ExpressionStatement" ]
    5 [ label = "" ]
    6 [ label = "ExpressionStatement\nExpressionStatement" ]
    0 -> 1 [ label = Normal ]
    0 -> 2 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    2 -> 3 [ label = Normal ]
    2 -> 4 [ label = Normal ]
    3 -> 4 [ label = Normal ]
    4 -> 5 [ label = Normal ]
    4 -> 6 [ label = Normal ]
    5 -> 6 [ label = Normal ]
}
